# idunn

./: .gitignore  Makefile  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/design/: yaml.md
idunn/: __main__.py  console.py  idunn.py
