[bdist_wheel]
universal = 1

[metadata]
name = idunn
version = 1.0.0
author = Brian Cristante
author_email = 33549821+brcrista@users.noreply.github.com
url = https://github.com/brcrista/idunn
license_file = LICENSE
# description = <specified in setup.py because setup.cfg does not use UTF-8 on some platforms>
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python

[options]
packages = find:
python-requires = >=3.6
install-requires =
    colorama>=0.4.3
    pandas>=1.0.3
    PyYAML>=5.3.1